[package]
name = "argon2wasm"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.56"
rust-argon2 = { path = "./argon2" }
hex = "0.4.0"
wee_alloc = "0.4.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
